Bit of code clean up fixed the spacing on the input boxes on the review product page

--- a/css/product.css
+++ b/css/product.css
@@ -428,13 +428,13 @@ select:focus {
 
 /*------------------VIEW ITEM HTML------------------*/
 /*INFORMATION SECTION*/
-.information{
-	float: left;
-	position: absolute;
-	top:5em;
-	width: 40%;
-	margin-left: 5%;
-	display: inline;
+.information-input{
+  float: left;
+  height: 50em;
+  width: 50%;
+  margin-left: 5%;
+  display: inline;
+
 }
 
 .information-header{
@@ -446,6 +446,17 @@ select:focus {
 	display: block;
 	float: left;
 	width:100%;
+}
+
+.review{
+	float: left;
+	/* position: absolute; */
+	/* top: 5em; */
+	width: 45%;
+	height: 50em;
+	margin-left: 0;
+	display: inline-block;
+	float: right;
 }
 
 /*---shipping information---*/
@@ -461,7 +472,6 @@ select:focus {
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	font-family: PT Sans;
-	margin-left: 3em;
 	margin-bottom: 1em;
 }
 
@@ -481,6 +491,8 @@ select:focus {
 	font-size: 0.75em;
 	text-transform: uppercase;
 	color:#00ADEF;
+
+	letter-spacing: 0.1em;
 	display: block;
 	float:left;
 	width: 100%;
@@ -507,13 +519,13 @@ select:focus {
 }
 
 .input-box{
-	margin-left: 3em;
 	display: block;
-	}
+	width:100%;
+}
 
 #input-detail{
 /*	margin-left: 6em;*/
-	width:100%;
+	width:85%;
 	margin-top: 0em;
 	margin-bottom: 1.5em;
 	float:left;
@@ -543,7 +555,7 @@ select:focus {
 	margin-left: 0.5em;
 	margin-top: 0.25em;
 	margin-bottom: 1.5em;
-	width:25%;
+	width:27%;
 	display: inline;
 	float:left;
 	font-family: PT Sans;
@@ -557,7 +569,7 @@ select:focus {
 	margin-left: 0.5em;
 	margin-top: 0.3em;
 	margin-bottom: 1.5em;
-	width:32.5%;
+	width:33.5%;
 	display: block;
 	float:left;
 	font-family: PT Sans;
@@ -599,7 +611,7 @@ select:focus {
 	border-radius: 0;
 /*	margin-left: 6em;*/
 	transition: 0.5s;
-	width:90%;
+	width:100%;
 	height:0.5em;
 	float:left;
 	display: inline;
@@ -627,16 +639,16 @@ select:focus {
 	letter-spacing: 3px;
 	text-align: center;
 	background-color: white;
-	border:0;
+	border: 0;
 	border-radius: 0;
-/*	margin-left: 6em;*/
+	/* margin-left: 6em; */
 	transition: 0.5s;
-	width:100%;
-	height:0.5em;
-	float:left;
-	display: block;
+	width: 100%;
+	height: 0.5em;
+	float: left;
+	display: inline;
 	margin: 0.25;
-	margin-left:0;
+	margin-left: 0;
 }
 
 .drop-down-details{
@@ -651,7 +663,6 @@ select:focus {
 
 .drop-down-card{
 	width: 50%;
-	margin-left: 3em;
 }
 
 input {
@@ -733,11 +744,10 @@ input {
 }
 
 .purchase-btn{
-	width:90%;
+	width:83%;
 	float:left;
 	display: block;
 	position: relative;
-	margin-left:4em;
 	margin-top:3em;
 }
 
